chore(test): add code coverage
Add code coverage using istanbul and report coverage to codecov.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ before_script:
   - npm prune
 script:
   - npm run test
+  - npm run check-coverage
 after_success:
+  - npm run report-coverage
   - npm run semantic-release
 branches:
   except:
